--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -1,6 +1,7 @@
 {
-  "timeZone": "Europe/Moscow",
-  "dependencies": {},
+  "timeZone": "Europe/Paris",
+  "dependencies": {
+  },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
 }
